--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
       <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
     </div>
   </header>
+
+      <section class="banner">
+        <h2 class="banner_titulo">Ja sabe onde começar</h2>
+      </section>
 </body>
 
 </html>
