--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
       <section class="banner">
         <h2 class="banner_titulo">Ja sabe onde começar</h2>
+          <p class="banner_texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
       </section>
 </body>
 
