que bizarro cara <voz fina>

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <section class="banner">
         <h2 class="banner_titulo">Ja sabe onde começar</h2>
           <p class="banner_texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+          <input type="search" name="" id="" class="banner_pesquisa" placeholder="Qual sera sua proxima letura?">
       </section>
 </body>
 
